--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ body{
     width: 320px;
     border-radius: 10px;
 }
+@media only screen and (max-width: 375px) {
+    #box{
+        width: 280px;
+        height: 435px;
+    }
+    #illustration{
+        width: 280px;
+    }
+}
+
 #learning{
     background-color: hsl(47, 88%, 63%);
     width: fit-content;
